<resources>
    <string name="app_name">Whatsup</string>
    <string name="contacts">Contacts</string>
    <string name="search">search</string>
    <string name="friends">Search</string>
    <string name="username">UserName</string>
    <string name="hey_there_this_is_the_last_message_i_have_sent">hey there, this is the last message i have sent</string>
    <string name="phone_number">Phone Number...</string>
    <string name="verification_code">Verification Code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name...</string>
    <string name="birth_date">Birth Date...</string>
    <string name="Me">Me</string>
    <string name="sample_name">Poula Atef</string>
    <string name="message">Message...</string>
    <string name="hey_there_this_is_my_message_in_this_app">hey there this is my msg in this app.</string>
    <string name="seen">seen</string>
    <string name="photo">Photo</string>
    <string name="WHATSUP_IMG_CONSTANT">WHATSUP_IMG_CONSTANT</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="outgoing_call">Outgoing Call</string>
</resources>