<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue1"
    tools:context=".UI.ProfileFragment">


    <ImageView
        android:id="@+id/back_to_main"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:onClick="onComponentClick"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_170sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_160sdp"
            android:layout_gravity="center"
            app:cardCornerRadius="25dp">
            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onComponentClick"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>
        <View
            android:id="@+id/active"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_gravity="bottom|center"
            android:elevation="2dp"
            android:backgroundTint="@color/active_green"
            android:background="@drawable/et_rounded_back"/>

    </FrameLayout>

    <EditText
        android:id="@+id/username_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_back"
        android:hint="@string/user_name"
        android:enabled="false"
        android:paddingStart="@dimen/_13sdp"
        android:singleLine="true"
        android:textColor="@color/blue1"
        android:textColorHint="@color/blue3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame" />


    <EditText
        android:id="@+id/phone_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_back"
        android:hint="@string/phone_number"
        android:paddingStart="@dimen/_13sdp"
        android:singleLine="true"
        android:enabled="false"
        android:textColor="@color/blue1"
        android:textColorHint="@color/blue3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_profile" />


    <TextView
        android:id="@+id/birth_date_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/birth_date"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/blue3"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_back"
        android:paddingStart="@dimen/_13sdp"
        android:gravity="center_vertical"
        android:onClick="onComponentClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>