<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue1"
    android:layout_height="match_parent"
    tools:context=".UI.MainFragment">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/Me"
        android:onClick="onComponentClick"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/add_friend"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_back"
        android:gravity="center|top"
        android:text="+"
        android:textColor="@color/blue1"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exit"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:background="@drawable/rounded_corner_back"
        android:gravity="center|top"
        android:textColor="@color/blue1"
        android:src="@drawable/ic_exit"
        android:textSize="@dimen/_18ssp"
        android:rotationY="180"
        android:onClick="onComponentClick"
        app:layout_constraintEnd_toStartOf="@+id/add_friend"
        app:layout_constraintTop_toTopOf="@+id/add_friend" />

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_corner_back"
        android:drawableStart="@drawable/magnifier"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/search"
        android:paddingHorizontal="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/blue1"
        android:textColorHint="@color/blue3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_friend" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/friends"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/search" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_friends"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_top_back"
        app:layout_constraintTop_toBottomOf="@+id/rec_friends">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_messages"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>